[package]
name = "osc_config"
version = "0.1.0"
authors = ["Cian O'Connor <cianoconnor@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.5"
serde = {version="1.0", features= ["derive"]}
ron = "0.7"
notify = "4.0"
